subnet.tf
resource "aws_subnet" "public_subnet" {

  vpc_id = aws_vpc.devops_vpc.id

  cidr_block = var.public_subnet_cidr

  availability_zone = "${var.aws_region}a"

  map_public_ip_on_launch = true

  tags = {
    Name = "${var.project_name}-public-subnet"
  }

}
